# DLcpp

./: CMakeLists.txt  main.cpp
DLComputation/: CMakeLists.txt  Computation.h  MAIN.md  custom-layer.py  parameters.py  useGPU.h  useGPU.py
MLP/: CMakeLists.txt  MAIN.md  dropout.cpp  dropout.h  mlp.cpp  mlp.h  overfit.cpp  overfit.h
convx/: CMakeLists.txt  LeNet.py  MAIN.md  convx.cpp  convx.h  convx.py
linearNet/: CMakeLists.txt  MAIN.md  lineaRegression.cpp  lineaRegression.h  softMax.cpp  softMax.h
matplot/: CMakeLists.txt  matplotlibcpp.h
model/: mlp.pt  net.pt
modernConvx/: CMakeLists.txt  MAIN.md  googlenet  modernConvx.cpp  modernConvx.h  modernConvx.py  nin.py  vgg.py
tensorOperator/: CMakeLists.txt  MAIN.md  tensorOperator.cpp  tensorOperator.h
